# SDL-Game-Development

./: LICENSE.txt  Makefile.am  README.md  configure  configure.ac
assets/: Makefile.am
autom4te.cache/: output.1  output.2  requests  traces.0  traces.1
src/: Makefile.am  enemy.cpp  enemy.h  game.cpp  game.h  gameobject.cpp  gameobject.h  gamestate.h  gamestatemachine.cpp  gamestatemachine.h  inputhandler.cpp  inputhandler.h  loaderparams.h  main.cpp  menubutton.cpp  menubutton.h  menustate.cpp  menustate.h  pausestate.cpp  pausestate.h  player.cpp  player.h  playstate.cpp  playstate.h  sdlgameobject.cpp  sdlgameobject.h  texturemanager.cpp  texturemanager.h  vector2d.cpp  vector2d.h
